# haskell-skeleton

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  Vagrantfile  build.sh  clean.sh  generate-cabal-file.sh  haskell-skeleton.cabal  haskell-skeleton.cabal.working  init-project.sh  job.xml  run-tests.sh  sonar-project.properties  sync-project.sh  test.sh
configuration/: job.xml  project.sh
debian/: changelog  control  copyright
documentation/: CHANGELOG.md  CONVENTIONS.md
documentation/dictionary/: skeleton.dic
documentation/man/: other.1.ronn
script/: build.sh  test.sh
script/haskell/: generate-cabal-file.sh  test.sh
script/job-configuration/: delete.sh  download.sh  update.sh  upload.sh
script/skeleton/: initialize.sh  synchronize.sh
spec/: HaskellSkeletonSpec.hs
src/: HaskellSkeleton.hs  Main.hs
src/LanguageExample/: Boilerplate.hs
