name: haskell-skeleton
version: 0.1.0.0
synopsis: Haskell project skeleton.
homepage: http://funtimecoding.org
license: MIT
license-file: LICENSE.md
author: Alexander Reitzel
maintainer: funtimecoding@gmail.com
category: Development
build-type: Simple
cabal-version: >=1.10

executable hs
  main-is: Main.hs
  build-depends: base >=4.8 && <4.9
  hs-source-dirs: src
  default-language: Haskell2010

library
  default-language: Haskell2010
  build-depends: base
  hs-source-dirs: src
  exposed-modules: HaskellSkeleton
  ghc-options: -Wall

test-suite mytestsuite
  default-language: Haskell2010
  build-depends: base, hspec, haskell-skeleton
  hs-source-dirs: spec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall
