name:                haskell-skeleton
version:             0.1.0.0
synopsis:            Skeleton for Haskell projects.
license:             MIT
license-file:        LICENSE.md
author:              Alexander Reitzel
maintainer:          funtimecoding@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  documentation/CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Main, HaskellSkeleton
  build-depends:       base >=4.9 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-skeleton
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      spec
  ghc-options:         -Wall
  build-depends:       base == 4.*, haskell-skeleton, hspec == 2.*
  other-modules:       HaskellSkeletonSpec
  default-language:    Haskell2010
